More minor code cleanup.